changed controller routes to match openapi specs
